<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    
    <include
        android:id="@+id/navigat_toolbar"
        layout="@layout/navigate_titlebar" />

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/et_login_phone"
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:background="@drawable/login_uname_pwd_bg"
        android:gravity="center_vertical|left"
        android:hint="@string/login_username"
        android:textColor="@color/app_main"
        android:inputType="phone"
         android:textSize="15sp"
         android:textStyle="bold"
        android:maxLength="11"
        android:paddingLeft="15dip" />

    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="3dip"
        android:background="@drawable/login_uname_pwd_bg"
        android:gravity="center_vertical|left"
         android:textSize="14sp"
        android:hint="@string/login_pwd"
        android:textColor="@color/app_main"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="15dip" />

    <Button
        android:id="@+id/btn_login_submit"
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip"
        android:textSize="14sp"
        android:background="@drawable/bg_btn_blue"
        android:text="@string/login_submit"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dip" >

        <CheckBox
            android:id="@+id/tv_login_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/login_remember"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dip"
            android:gravity="left"
            android:text="@string/login_findpwd"
            android:textColor="@color/app_main" />
        
        <TextView
            android:id="@+id/tv_login_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10dip"
            android:gravity="right"
            android:text="@string/login_reg"
            android:textColor="@color/app_main" />
    </LinearLayout>

</LinearLayout>