<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/navigat_toolbar"
        layout="@layout/navigate_titlebar" />

    <EditText
        android:id="@+id/et_reg_code"
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_uname_pwd_bg"
        android:gravity="center_vertical|left"
        android:hint="@string/reg_verify_code"
        android:inputType="phone"
        android:maxLength="6"
        android:paddingLeft="10dip"
        android:textColor="@color/app_main"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_reg_pwd"
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="3dip"
        android:background="@drawable/login_uname_pwd_bg"
        android:gravity="center_vertical|left"
        android:hint="@string/reg_verify_pwd"
        android:inputType="text"
        android:maxLength="16"
        android:paddingLeft="10dip"
        android:textColor="@color/app_main"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_reg_ok"
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:layout_margin="10dip"
        android:background="@drawable/bg_btn_blue"
        android:text="@string/reg_verify_submit"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_reg_code_again"
        android:layout_width="fill_parent"
        android:layout_height="25dip"
        android:gravity="center_vertical"
        android:paddingLeft="20dip"
        android:text="@string/reg_verify_redo"
        android:textColor="@color/app_main" />

</LinearLayout>