<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/navigat_toolbar"
        layout="@layout/navigate_titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_reg_phone"
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@drawable/login_uname_pwd_bg"
            android:gravity="center_vertical|left"
            android:hint="@string/reg_phone_11"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="15dip"
            android:textColor="@color/app_main"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:orientation="horizontal"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" >

        <CheckBox
            android:id="@+id/cbx_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_checkbox"
            android:button="@null"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我同意"
            android:textColor="@color/app_main" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="10dip"
            android:text="@string/reg_order"
            android:textColor="@color/app_main" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_reg_getcode"
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:layout_marginTop="10dip"
        android:layout_margin="10dip"
        android:background="@drawable/bg_btn_blue"
        android:text="@string/reg_verify_phone"
        android:textColor="@color/white" />

</LinearLayout>